[project]
name = "quant-portfolio"
version = "0.1.0"
description = "Quantitative finance portfolio - Black-Scholes pricer with Greeks & Monte Carlo validation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8", "seaborn>=0.13", "jupyter>=1.0"]
dev = ["pytest>=8.0", "black>=24.0", "ruff>=0.5"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# pycodestyle (E), Pyflakes (F), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
